# backend-devops-interview

./: .gitattributes  Makefile  NOTES.md  README.md  docker-compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: format.yml  lint.yml  typecheck.yml
ai/: transcript.md
blog/: models.py
blog/management/commands/: seed.py
blog/migrations/: 0002_performance_indexes.py
